PostGIS 3.3.10
2026-xx-xx

PostGIS 3.3.9
2026-02-09

PostgreSQL 11-17 required. GEOS 3.6+ required but GEOS 3.11+ to take advantage of all features.
Proj 4.9+ required.

* Bug Fixes and Enhancements *

 - #5978, fix parsing of constraints in geometry_columns (Paul Ramsey)
 - #5977, Fix downgrade protection with standard conforming strings off (Sandro Santilli)
 - #5951, [topology] Fix crash in ST_GetFaceEdges with corrupted topology (Sandro Santilli)
 - #5947, [topology] Fix crash in ST_ModEdgeHeal (Sandro Santilli)
 - #5922, [topology] Fix crash in TopoGeo_AddLinestring with EMPTY input (Sandro Santilli)
 - #5908, [topology] Fix crash in GetFaceContainingPoint (Sandro Santilli)
 - #5907, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)
 - #5876, Fix ST_AddPoint with empty point argument (Paul Ramsey)
 - #5829, geometry_columns with non-standard constraints (Paul Ramsey)
 - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
 - #5885, Fix documentation about grid-based overlay operations (Sandro Santilli)
 - #5921, Crash freeing uninitialized pointer (Arsenii Mukhin)
 - #5912, Crash on GML with xlink and no prefix (Paul Ramsey)
 - #5905, Crash on deeply nested geometries (Paul Ramsey)
 - #5909, ST_ValueCount crashes on empty table (Paul Ramsey)
 - #5917, ST_Relate becomes unresponsive (Paul Ramsey)
 - #5985, Fix configure issue with Debian 12 and 13 (Regina Obe, Sandro Santilli)
 - #5991, CircularString distance error (Paul Ramsey)
 - #5962, Consistent clipping of MULTI/POINT (Paul Ramsey)
 - #5989, CurvePolygon distance error (Paul Ramsey)
 - #6023, Fix robustness issue in ptarray_contains_point (Sandro Santilli)
 - #6027, Fix RemoveUnusedPrimitives without topology in search_path (Sandro Santilli)
 - #6028, crash indexing malformed empty polygon (Paul Ramsey)
 - GH-841, small memory leak in address_standardizer (Maxim Korotkov)
 - #5998, [tiger_geocoder] [security] CVE-2022-2625, make sure tables required